--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="acoyavs.html">ACOYAVS</a></li>
+                li><a href="intern.html">Internship</a></li>
                 <li><a href="https://www.linkedin.com/in/himanshu-singh-tomar-107066153/" target="_blank"><i class="fa-brands fa-linkedin fa-lg" aria-hidden="true"></i><span class="sr-only">Linkedin</span></a></li>
                 <li><a href="https://github.com/Himanshusinghtomar" target="_blank"><i class="fa-brands fa-github fa-lg" aria-hidden="true"></i></a></li>
                 <li><a href="https://docs.google.com/document/d/1kzzf-JOwohIeAPFWRQom5y7SeV0w-PyKPUKEkkSFKk0/edit?usp=sharing" target="_blank" class="button">Resume</a></li>
